# AEGIS

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker_fullstack_up.txt  docker_rebuild.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run-dev.ps1  session_log.txt  verify_environment.py
.github/workflows/: ci.yml
backend/: __init__.py
backend/api/: __init__.py  app.py  dependencies.py  middleware.py
backend/api/routes/: __init__.py  dashboard.py  health.py  ingestion.py
backend/attack_graph/: __init__.py  exceptions.py  graph_builder.py  graph_store.py  models.py  service.py  traversal.py
backend/audit/: __init__.py  exceptions.py  integrity.py  ledger.py  models.py  query.py  service.py  storage.py
backend/baseline/: __init__.py  aggregator.py  builder.py  exceptions.py  models.py  reader.py  reader_api.py  service.py  statistics.py  storage.py  updater.py
backend/chain_detection/: __init__.py  detector.py  evaluator.py  exceptions.py  models.py  service.py  storage.py
backend/context/: __init__.py  builder.py  exceptions.py  models.py  service.py  storage.py  summarizer.py  timeline.py
backend/core/: __init__.py  config.py  constants.py  exceptions.py  health.py  logging.py
backend/dashboard/: __init__.py
backend/detection/: __init__.py  exceptions.py  models.py  preprocessor.py  scorer.py  service.py  storage.py  trainer.py
backend/digital_twin/: __init__.py  config.py  health.py  models.py  registry.py
backend/explainability/: __init__.py  exceptions.py  explainer.py  models.py  service.py  storage.py
backend/features/: __init__.py  exceptions.py  models.py  pipeline.py  service.py  writer.py
backend/features/extractors/: __init__.py  auth.py  baseline.py  entity_activity.py  frequency.py  network.py  ot.py  process.py  temporal.py
backend/graph/: __init__.py
backend/ingestion/: __init__.py  service.py
backend/llm/: __init__.py
backend/metrics/: __init__.py  exceptions.py  models.py  reader.py  service.py  store.py
backend/metrics/collectors/: __init__.py  baseline.py  detection.py  feature.py  health.py  pipeline.py  response.py
backend/mitre/: __init__.py  exceptions.py  knowledge_base.py  mapper.py  models.py  service.py  storage.py
backend/normalization/: __init__.py  collector.py  exceptions.py  models.py  pipeline.py  writer.py
backend/normalization/parsers/: __init__.py  attacker.py  domain_controller.py  hospital_server.py  ot_node.py
backend/orchestrator/: __init__.py  approval.py  audit.py  blast_radius.py  exceptions.py  executor.py  models.py  playbooks.py  service.py  storage.py
backend/replay/: __init__.py  exceptions.py  models.py  navigator.py  player.py  service.py  storage.py  timeline.py
backend/response/: __init__.py
backend/shared/: __init__.py  models.py  schemas.py  types.py
backend/shared/utils/: __init__.py  datetime_utils.py  id_utils.py  json_utils.py  validation_utils.py
backend/synthetic_attack/: __init__.py  exceptions.py  generator.py  models.py  scheduler.py  service.py  storage.py  templates.py
data/attack_reference/: attack_reference.json
data/digital_twin/attacker/: .gitkeep
data/digital_twin/domain_controller/: .gitkeep
data/digital_twin/hospital_server/: .gitkeep
data/digital_twin/ot_node/: .gitkeep
data/metrics/: manifest.json
data/metrics/snapshots/: 6be3ba10-1125-4f6f-a59b-c66d7a8b1636.json
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docker/digital_twin/attacker/: Dockerfile  entrypoint.sh
docker/digital_twin/config/: generation_rates.env  network.env
docker/digital_twin/domain_controller/: Dockerfile  entrypoint.sh  generator.py  health_server.py
docker/digital_twin/hospital_server/: Dockerfile  entrypoint.sh  generator.py  health_server.py
docker/digital_twin/ot_node/: Dockerfile  entrypoint.sh  generator.py  health_server.py
docker/digital_twin/shared/: __init__.py  base_generator.py  event_schema.py  writer.py
docs/: Developer_Startup_Manual.md  SOFTWARE_TEST_PLAN.md  architecture.md  attack_chain_architecture.md  attack_context_architecture.md  attack_graph_architecture.md  audit_ledger_architecture.md  dashboard_architecture.md  detection_architecture.md  developer_guide.md  digital_twin.md  features.md  forensic_replay_architecture.md  metrics.md  mitre_architecture.md  normalization.md  response_orchestrator_architecture.md
docs/adr/: 001_architecture_decisions.md  002_digital_twin_network_design.md
frontend/: index.html
frontend/static/css/: dashboard.css
frontend/static/js/: dashboard.js
scripts/: diagnose_if_scores.py  lint.sh  run_tests.sh  setup_dev.sh
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_baseline_pipeline.py  test_digital_twin_health.py  test_feature_pipeline.py  test_health.py  test_ingest_route.py  test_metrics_pipeline.py  test_normalization_pipeline.py
tests/unit/attack_graph/: conftest.py  test_graph_builder.py  test_graph_store.py  test_models.py  test_service.py  test_traversal.py
tests/unit/audit/: conftest.py  test_integrity.py  test_ledger.py  test_models.py  test_query.py  test_service.py  test_storage.py
tests/unit/baseline/: __init__.py  conftest.py  test_aggregator.py  test_builder.py  test_models.py  test_reader.py  test_statistics.py  test_storage.py  test_updater.py
tests/unit/chain_detection/: conftest.py  test_detector.py  test_evaluator.py  (+3 more)
(+71 files in other folders)
