[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project Metadata
# ---------------------------------------------------------------------------
[project]
name = "cybershield"
version = "0.1.0"
description = "AI-Driven Cyber Resilience Platform for Critical National Infrastructure"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "CyberShield Team" }]
requires-python = ">=3.11"
keywords = ["cybersecurity", "anomaly-detection", "critical-infrastructure", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "shap>=0.45.0",
    "numba==0.61.0",  # pinned: 0.66.0 conflicts with coverage>=7.x (breaks SHAP tests)
    "networkx>=3.3",
    "pandas>=2.2.0",
]
llm = [
    "anthropic>=0.28.0",
    "tenacity>=8.3.0",
]
db = [
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
]
dev = [
    "cybershield[ml,llm,db]",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipython>=8.24.0",
]

# ---------------------------------------------------------------------------
# Setuptools — Package Discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "data*", "docker*", "models*", "reports*"]


[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
    "N",   # pep8-naming
    "ANN", # flake8-annotations (selected subset)
]
ignore = [
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "ANN401", # any type allowed in some places
    "B008",   # do not perform function calls in argument defaults (FastAPI pattern)
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "ARG", "S101"]
"backend/*/migrations/**" = ["ANN", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy — Static Type Checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "shap.*",
    "sklearn.*",
    "networkx.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=80",
    "-v",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (fast, no I/O)",
    "integration: marks tests as integration tests (may use I/O)",
    "slow: marks tests as slow (skip in fast CI)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    # anyio/TestClient on Windows: ASGI memory streams GC'd during teardown
    "ignore::ResourceWarning:anyio.*",
    # anyio unclosed stream warning promoted via pytest unraisable hook
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/*/migrations/*",
    "backend/**/__init__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
